// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAlignment should keep wrapped-component styling 1`] = `
<DocumentFragment>
  <span
    style="line-height: 1.125rem; display: inline-block; margin-top: 0.3125rem; vertical-align: top;"
  >
    <div
      style="float: right;"
    >
      test lineHeight 1.75rem and iconsSize 1.125rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 1`] = `
<DocumentFragment>
  <span
    style="line-height: 1.125rem; display: inline-block; margin-top: 0.0625rem; vertical-align: top;"
  >
    <div>
      test lineHeight 1.25rem and iconsSize 1.125rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 2`] = `
<DocumentFragment>
  <span
    style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
  >
    <div>
      test lineHeight 1.25rem and iconsSize 1.5rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 3`] = `
<DocumentFragment>
  <span
    style="line-height: 1.125rem; display: inline-block; margin-top: 0.1875rem; vertical-align: top;"
  >
    <div>
      test lineHeight 1.5rem and iconsSize 1.125rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 4`] = `
<DocumentFragment>
  <span
    style="line-height: 1.5rem; display: inline-block; margin-top: 0rem; vertical-align: top;"
  >
    <div>
      test lineHeight 1.5rem and iconsSize 1.5rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 5`] = `
<DocumentFragment>
  <span
    style="line-height: 1.125rem; display: inline-block; margin-top: 0.3125rem; vertical-align: top;"
  >
    <div>
      test lineHeight 1.75rem and iconsSize 1.125rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 6`] = `
<DocumentFragment>
  <span
    style="line-height: 1.5rem; display: inline-block; margin-top: 0.125rem; vertical-align: top;"
  >
    <div>
      test lineHeight 1.75rem and iconsSize 1.5rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 7`] = `
<DocumentFragment>
  <span
    style="line-height: 1.125rem; display: inline-block; margin-top: 0.4375rem; vertical-align: top;"
  >
    <div>
      test lineHeight 2rem and iconsSize 1.125rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 8`] = `
<DocumentFragment>
  <span
    style="line-height: 1.5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
  >
    <div>
      test lineHeight 2rem and iconsSize 1.5rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 9`] = `
<DocumentFragment>
  <span
    style="line-height: 1.125rem; display: inline-block; margin-top: 0.6875rem; vertical-align: top;"
  >
    <div>
      test lineHeight 2.5rem and iconsSize 1.125rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should render correctly 10`] = `
<DocumentFragment>
  <span
    style="line-height: 1.5rem; display: inline-block; margin-top: 0.5rem; vertical-align: top;"
  >
    <div>
      test lineHeight 2.5rem and iconsSize 1.5rem
    </div>
  </span>
</DocumentFragment>
`;

exports[`withAlignment should wrap the component display name 1`] = `
<DocumentFragment>
  <div>
    <span
      style="line-height: 1.125rem; display: inline-block; margin-top: 0.3125rem; vertical-align: top;"
    >
      <div>
        test
      </div>
    </span>
  </div>
</DocumentFragment>
`;
